// ==========================================
// PWM TACTICAL - DBML SCHEMA (DEFINITIVO CON NOTE)
// ==========================================

// --- TIPI PERSONALIZZATI ---

Enum status_amico {
  pending [note: 'Richiesta inviata']
  accepted [note: 'Richiesta accettata']
  rejected [note: 'Richiesta rifiutata']
  blocked [note: 'Utente bloccato']
}

// --- TABELLE ---

// 1. Utenti
Table utenti {
  id_user UUID [primary key, default: `uuid_generate_v4()`, note: 'Codice hash o chiave auto incrementale 32bit']
  username varchar(32) [unique, not null, note: '32 char']
  email varchar(64) [unique, not null, note: '32 char']
  password_hash text [not null, note: 'Hash generato con Argon2id (Modulo Aslan)']
  reg varchar(32) [note: 'Regione di appartenenza macro area. Un giocatore JP può giocare con uno IT']
  elo_rating integer [default: 1000, note: 'Leaderboard globale: modificato per ogni partita conclusa']
  avatar_id smallint [default: 1, note: 'ID dell avatar scelto, da 1 a 20']
  last_username_change timestamp [note: 'Data dell ultimo cambio username, opzionale']
  created_at timestamp [default: `now()`]
  recupera_passwd varchar(255) [note: 'Token dinamico per recupero password (TTL 10 min)']
  two_fa_method varchar(50) [note: 'Metodo scelto: OTP, Authenticator, SMS']
  two_fa_secret varchar(255) [note: 'Segreto crittografato per generazione codici 2FA']
  two_fa_enabled boolean [default: false, note: 'Indica se l account è verificato con 2FA']
  is_banned boolean [default: false, note: 'Evita JOIN con tabella ban in fase di login']
  is_perma_banned boolean
  codice_amico varchar(10) [unique, note: 'Codice univoco AMICO-1234 generato dal server basato su ID']
}

// 1.1 Amici
Table amici {
  id_user UUID
  id_amico UUID
  created_at timestamp [default: `now()`, note: 'Data invio richiesta']
  accepted_at timestamp [note: 'Data accettazione, null se pending']
  status status_amico [default: 'pending']
  link varchar(10) [note: 'Link alfanumerico univoco per accettare/rifiutare']
  link_duration integer [note: 'Durata in giorni per disabilitare il link']

  indexes {
    (id_user, id_amico) [pk]
  }
}

// 2. Accessi
Table accessi {
  id_access UUID [primary key, default: `uuid_generate_v4()`]
  user_id UUID [not null]
  ip_address varchar(45) [note: 'Identificazione account duplicati']
  login_time timestamp [default: `now()`, note: 'Monitoraggio attività e analisi sicurezza']
  cookie_token varchar(255) [note: 'ID sessione e TTL inizialmente gestiti come oggetto']
  expire_time timestamp [note: 'Scadenza per invalidazione sessioni inattive']
}

// 3. Partite
Table partite {
  id_partita UUID [primary key, default: `uuid_generate_v4()`]
  id_partita_visualizzato varchar(10) [unique, note: 'Codice alfanumerico (es. PARTITA-1234) per gli utenti']
  id_partita_hash varchar(255) [note: 'Hash univoco usato nell URL']
  nome_partita varchar(100) [not null]
  has_elo boolean [default: true, note: 'Indica se la partita è classificata o amichevole']
  id_host UUID [not null, note: 'ID utente creatore']
  duration_max integer [default: 10080, note: 'Default 7 giorni (in minuti)']
  num_player_max integer [note: 'Max 512 player']
  tipo_partita varchar(50) [note: '1v1, 2v2, FFA, Conquista Mondo (Fissa/Dinamica)']
  modalita varchar(50) [note: 'Distruzione, Conquista, Tempo']
  moltiplicatore varchar(10) [note: '1x fino a 1000x per risorse e tempo']
  regioni_giocabili varchar(16) [note: 'Vettore 16 bit (es. Bit 2: Europa, Bit 10: Italia)']
  stato varchar(20) [note: 'In attesa (00), In corso (01), Terminata (10), Eliminata (11)']
  created_at timestamp [default: `now()`]
  nome_json varchar(255) [note: 'Hash di configurazione mappa e regole']
  
  note: 'Il server può gestire i campi da duration_max a stato in una stringa compressa B64 (es: 00|111|0111|0111|0000|0010|0000000001000000)'
}

// 4. Partecipanti Partite
Table partecipanti_partite {
  user_id UUID [not null]
  partita_id UUID [not null]
  punteggio integer [default: 0]
  territori_conquistati integer [default: 0]
  territori_persi integer [default: 0]
  capitali_distrutte integer [default: 0]
  time_death timestamp [note: 'Sconfitto (zero territori)']
  rank integer [note: 'Posizione definita da territori e capitali']
  strutture_lvl_max integer [default: 0]
  truppe_eliminate integer [note: 'Kill count nemici']
  truppe_perse integer [note: 'Perdite proprie']
  perc_distruzione real [default: 0.0]
  id_alleanza UUID
  utenti_alleati text [note: 'Matrice triangolare B64 (0: No, 1: Alleanza)']
  utenti_in_guerra text [note: 'Matrice triangolare B64 (0: No, 1: Guerra)']
  stato_risorse jsonb [default: '{}', note: 'Sincronizzato da Redis ogni 15-30m (Heartbeat) o disconnessione']
  stato_territori jsonb [note: 'Lista territori (Vettore di bit)']
  stato_ricerche jsonb [default: '{}', note: 'Tech Tree del partecipante']

  indexes {
    (user_id, partita_id) [pk]
  }
}

// 8. Messaggi
Table messaggi {
  id_mex UUID [primary key, default: `uuid_generate_v4()`, note: 'Ancoraggio autore/partita per evitare messaggi fantasma']
  id_user_send UUID [not null]
  id_partita UUID [not null]
  content text [not null, note: 'Testo da 1 a 200 caratteri']
  time_stamp timestamp [default: `now()`]
}

// 9. Chat
Table chat {
  id_chat_entry bigint [primary key, increment]
  id_mex UUID [unique, not null]
  id_user_receiver UUID [note: 'Null per broadcast/alleanza']
  tipo_chat varchar(20) [note: '2 bit: unicast, multicast, broadcast o stringa estesa']
}

// 10. Armata
Table armata {
  id_istanza_armata UUID [primary key, default: `uuid_generate_v4()`, note: 'UUID es. armata_1714123']
  partita_id UUID [not null]
  user_id UUID [not null]
  id_modello varchar(64) [note: 'Modello truppa con range d attacco massimo e tier più alto']
  x double_precision [note: 'Sincronizzata da Redis']
  y double_precision [note: 'Sincronizzata da Redis']
  alt real [default: 0, note: 'Altitudine (Aereo/Sottomarino -20m)']
  rot real [default: 0, note: 'Rotazione radianti per rendering 3D']
  hp integer [note: 'Punti Vita totali armata']
  stato integer [default: 1, note: '1:Idle, 2:Movimento, 3:Combattimento, 4:Ritirata']
  attitudine integer [default: 1, note: 'AI: 1:Aggressiva, 2:Difensiva, 3:Evasiva']
  max_range_atck integer [note: 'Range della truppa con gittata massima']
  dmg_tot integer [note: 'Attacco totale truppe a range massimo']
  speed integer [note: 'Velocità della truppa più lenta nell armata']
  tipo_armata integer [note: 'Definisce limitazioni movimento (es. Nave non attacca fanti)']
  are_they_in_the_same_position boolean [note: 'Indica se il gruppo è raggruppato per gestione danno']
  last_update timestamp [default: `now()`]
}

// 11. Truppe
Table truppe {
  id_istanza_truppa UUID [primary key, default: `uuid_generate_v4()`, note: 'UUID es. unit_1714123']
  partita_id UUID [not null]
  user_id UUID [not null]
  id_armata UUID [note: 'Riferimento all armata per ottimizzazione query filtri']
  hp integer
  metadata jsonb [note: 'Intelligence e parametri spionaggio']
}

// --- RELAZIONI ---

Ref: utenti.id_user < accessi.user_id [delete: cascade]
Ref: utenti.id_user < partecipanti_partite.user_id [delete: cascade]
Ref: utenti.id_user < partite.id_host
Ref: utenti.id_user < chat.id_user_receiver

Ref: partite.id_partita < partecipanti_partite.partita_id [delete: cascade]

Ref: partecipanti_partite.(user_id, partita_id) < messaggi.(id_user_send, id_partita) [delete: cascade]
Ref: partecipanti_partite.(user_id, partita_id) < armata.(user_id, partita_id) [delete: cascade]
Ref: partecipanti_partite.(user_id, partita_id) < truppe.(user_id, partita_id) [delete: cascade]

Ref: messaggi.id_mex - chat.id_mex [delete: cascade]
Ref: armata.id_istanza_armata < truppe.id_armata [delete: set null]
Ref: utenti.id_user < amici.id_user
Ref: utenti.id_user < amici.id_amico